--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "dev": "NODE_EXTRA_CA_CERTS=`pwd`/localhost-rootCA.pem npx wrangler pages dev --local-protocol https -- npx vite",
     "build": "npm run prepare-env && vite build",
     "preview": "NODE_EXTRA_CA_CERTS=`pwd`/localhost-rootCA.pem npx wrangler pages dev --local-protocol https -- npx vite preview",
-    "prepare-env": "node --loader ts-node/esm ./prepare-env.ts"
+    "prepare-env": "node --loader ts-node/esm ./prepare-env.ts",
+    "publish": "npm run build && wrangler pages publish dist"
   },
   "dependencies": {
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "@sctg/nocors-pages": "^0.9.13"
+    "@sctg/nocors-pages": "^0.9.15"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.18.0",
@@ -29,7 +30,7 @@
     "autoprefixer": "^10.4.13",
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.9",
-    "npm-check-updates": "^16.3.25",
+    "npm-check-updates": "^16.4.1",
     "postcss": "^8.4.19",
     "postcss-purgefonts": "^1.0.2",
     "sass": "^1.56.1",
@@ -37,6 +38,6 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
-    "wrangler": "^2.2.1"
+    "wrangler": "^2.2.2"
   }
 }
